Add zone to domain

--- a/deploy/surveychimp-test.yaml
+++ b/deploy/surveychimp-test.yaml
@@ -7,6 +7,7 @@ databases:
 domains:
 - domain: test-survey.surveychimp-and-iths.me
   type: PRIMARY
+  zone: surveychimp-and-iths.me
 name: survey-chimp-test
 region: ams
 services:
