--- a/deploy/surveychimp-prod.yaml
+++ b/deploy/surveychimp-prod.yaml
@@ -7,6 +7,7 @@ databases:
 domains:
 - domain: survey.surveychimp-and-iths.me
   type: PRIMARY
+  zone: surveychimp-and-iths.me
 name: survey-chimp-prod
 region: ams
 services:
