--- a/.github/workflows/test-and-build-api.yml
+++ b/.github/workflows/test-and-build-api.yml
@@ -1,8 +1,6 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -23,4 +21,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm run test:api
