New config test

--- a/.github/workflows/test-and-build-api.yml
+++ b/.github/workflows/test-and-build-api.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main ]
     paths: 
-      - './apps/surveychimp-api/**'
+      - 'apps/surveychimp-api/**'
 
 jobs:
   build:
