--- a/.github/workflows/test-and-build-spa.yml
+++ b/.github/workflows/test-and-build-spa.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
     paths: 
       - 'apps/surveychimp-survey-spa/**'
-      - 'lib/**'
+      - 'libs/**'
 
 jobs:
   build:
