--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "18.0.6",
     "@types/react-is": "17.0.3",
     "@types/react-router-dom": "5.3.3",
+    "@types/react-stars": "^2.2.1",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -61,6 +62,7 @@
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.8.3",
     "prettier": "^2.6.2",
+    "react-stars": "^2.2.5",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
